WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119649
Shadows don't support viewport units
https://bugs.webkit.org/show_bug.cgi?id=119649
Summary
Shadows don't support viewport units
Dean Jackson
Reported
2013-08-09 20:21:48 PDT
Shadows don't support viewport units
Attachments
Patch
(3.83 KB, patch)
2013-08-09 20:27 PDT
,
Dean Jackson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2013-08-09 20:27:59 PDT
Created
attachment 208470
[details]
Patch
Dean Jackson
Comment 2
2013-08-09 20:30:08 PDT
<
rdar://problem/14702601
>
WebKit Commit Bot
Comment 3
2013-08-12 10:22:35 PDT
Comment on
attachment 208470
[details]
Patch Clearing flags on attachment: 208470 Committed
r153948
: <
http://trac.webkit.org/changeset/153948
>
WebKit Commit Bot
Comment 4
2013-08-12 10:22:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug